Aba projetos finalizada

--- a/Desafio05/Views/Projetos/Index.cshtml
+++ b/Desafio05/Views/Projetos/Index.cshtml
@@ -16,50 +16,81 @@
 
 <div class="row">
 
-
-    <div style="text-align:justify;">
-    <div class="col-md-4">
-        <img class="img-responsive" src="~/Content/Images/repo.png" />
-        <h2>Exercio de Herança (C# e Java)</h2>
-        <p>
-            Utilizando de conceitos de POO, no projeto foram aplicados as condições herança, utilizando um Veiculo "pai" e suas "filhas", carro, avião e caminhão.<br>
-
-
-        </p>
-        <p><a class="btn btn-default" href="https://github.com/gui-azesantos"> Repositório do Projeto | GitHub &raquo;</a></p>
-
-    </div>
-    <div class="col-md-4">
-        <img class="img-responsive" src="~/Content/Images/repo.png" />
-        <h2>Exercio de Polimorfimo (C# e Java)</h2>
-        Utilizando de conceitos de POO, no projeto foram aplicados conceitos de polimorfimos como Overide e Overcharge para diferenciar metódos do "pai" para suas "filhas".<br>
-        <p>
-
-        </p>
-        <p><a class="btn btn-default" href="https://github.com/gui-azesantos"> Repositório do Projeto | GitHub &raquo;</a></p>
-
-    </div>
+    <!--Java-->
    
-    <div class="col-md-4">
-        <img class="img-responsive" src="~/Content/Images/repo.png" />
-        <h2> Desafio 04(C# e Java)</h2>
-        <p>
-            O Desafio 04 consistiui na construção de um software capaz de instanciar projetos de uma loja, instaciar a loja,
-            calcular os impostos dos produtos e patrimonio total. Tudo que foi construido utlizou de conceitos de POO.
-        </p>
-        <p><a class="btn btn-default" href="https://github.com/gui-azesantos"> Repositório do Projeto | GitHub &raquo;</a></p>
-    </div>
+        <div class="col-md-3">
+            <img class="img-responsive" src="~/Content/Images/repo.png" />
+            <h2>Exercício  de Polimorfimo (Java)</h2>
+            <p>
+                Utilizando de conceitos de POO, no projeto foram aplicados as condições herança, utilizando um Veiculo "pai" para instaciar suas "filhas", carro, avião e caminhão.<br>
+            </p>
+            <p><a class="btn btn-default" href="https://github.com/gui-azesantos/Exercicio-Polimorfismo"> GitHub &raquo;</a></p>
+            </div>
 
-    <div class="col-md-4">
-        <img class="img-responsive" src="~/Content/Images/repo.png" />
-        <h2> Desafio 05 (C# - ASP.Net MVC)</h2>
-        <p>
-            O Desafio 05 é o atual site. Foi utilizado o MVC ASP.Net para sua construção, cujo os conceitos que foram estudados foram postos em prática.
+            <div class="col-md-3">
+                <img class="img-responsive" src="~/Content/Images/repo.png" />
+                <h2>Prova POO (Java)</h2>
 
-        </p>
-        <p><a class="btn btn-default" href="https://github.com/gui-azesantos"> Repositório do Projeto | GitHub &raquo;</a></p>
-        </div>
-    </div>
+                <p>
+                    Com o uso de POO, no projeto foram aplicados conceitos de polimorfimos como
+                    Overide e Overcharge para diferenciar metódos do "pai" para suas "filhas". Também foram exploradas a manipulação de Arrays.
+                    <br>
+                </p>
+                <p><a class="btn btn-default" href="https://github.com/gui-azesantos/ProvaPOO-Java"> GitHub &raquo;</a></p>
+            </div>
+         
+            <div class="col-md-3">
+                <img class="img-responsive" src="~/Content/Images/repo.png" />
+                <h2> Desafio 04 (Java)</h2>
+                <p>
+                    O Desafio 04 consistiui na construção de um software capaz de instanciar projetos de uma loja, instaciar a loja,
+                    calcular os impostos dos produtos e patrimonio total. Tudo que foi construido utlizou de conceitos de POO.
+                </p>
+                <p><a class="btn btn-default" href="https://github.com/gui-azesantos/Desafio-04"> GitHub &raquo;</a></p>
+            </div>
+
+
+            <!--C#-->
+            <div class="col-md-3">
+                <img class="img-responsive" src="~/Content/Images/repo.png" />
+                <h2>Exercício de Herança (C#)</h2>
+                <p>
+                    Utilizando de conceitos de POO, no projeto foram aplicados as condições herança, utilizando um Veiculo "pai" para instaciar suas "filhas", carro, avião e caminhão.<br>
+                </p>
+                <p><a class="btn btn-default" href="https://github.com/gui-azesantos/Heranca-e-PolimorfismoCSharp"> GitHub &raquo;</a></p>
+            </div>
+
+            <div class="col-md-3">
+                <img class="img-responsive" src="~/Content/Images/repo.png" />
+                <h2>Prova POO (C#)</h2>
+                <p>
+                    Com o uso de POO, no projeto foram aplicados conceitos de polimorfimos como
+                    Overide e Overcharge para diferenciar metódos do "pai" para suas "filhas". Também foram exploradas a manipulação de Arrays.
+                    <br>
+                </p>
+                <p><a class="btn btn-default" href="https://github.com/gui-azesantos/ProvaPOO-CSharp"> GitHub &raquo;</a></p>
+
+            </div>
+
+            <div class="col-md-3">
+                <img class="img-responsive" src="~/Content/Images/repo.png" />
+                <h2>Desafio 04(C#)</h2>
+                <p>
+                    O Desafio 04 consistiui na construção de um software capaz de instanciar projetos de uma loja, instaciar a loja,
+                    calcular os impostos dos produtos e patrimonio total. Tudo que foi construido utlizou de conceitos de POO.
+                </p>
+                <p><a class="btn btn-default" href="https://github.com/gui-azesantos/Desafio04-CSharp">  GitHub &raquo;</a></p>
+            </div>
+
+            <div class="col-md-3">
+                <img class="img-responsive" src="~/Content/Images/repo.png" />
+                <h2>Desafio 05(C#- ASP.Net MVC)</h2>
+                <p>
+                    O Desafio 05 é o atual site. Foi utilizado o MVC ASP.Net para sua construção, cujo os conceitos estudados foram postos em prática.
+                </p>
+                <p><a class="btn btn-default" href="https://github.com/gui-azesantos/Desafio05"> GitHub &raquo;</a></p>
+                <!--C#-->
+            </div>
 </div>
 
 
