--- a/Desafio05/Views/Home/Index.cshtml
+++ b/Desafio05/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="jumbotron" style="font-family:Bahnschrift; background-color:forestgreen; color:white">
             <h1>ASP.NET</h1>
-            <p class="lead">  Minha primeira aplicação ASP.NET MVC .</p>
+            <p class="lead">  Minha primeira aplicação ASP.NET MVC </p>
 
         </div>
         <div class="col-md-6" style="">
@@ -32,9 +32,10 @@
                 </div>
             </div>
          </div>
-        <div class="col-md-6" style="text-align:center; ">
+        <div class="col-md-6" style="text-align:center; align-content:center;">
 
             <img src="~/Content/Images/0.jfif" height="300" width="300" style="border:solid; border-color:black; border-radius:150px 150px 150px 150px;">
+            <h1>Guilherme Azevedo Santos</h1>
         </div>
     </div>
 
@@ -53,7 +54,7 @@
 
         <div class="col-md-4">
             <img class="img-responsive" src="~/Content/Images/skills.png" />
-            <h2>Skill</h2>
+            <h2>Habilidades</h2>
             <p> Dê uma olhada nas minhas habilidades!</p>
             <p><a class="btn btn-default" href="/Skills/Index">Clique aqui! &raquo;</a></p>
         </div>
